feat: added http handler to retrieve payment by paymentID
